# starcoin

./: .envrc  .gitattributes  .gitignore  .gitmodules  .metadata  0001-stress-test-improve-the-method-to-set-expiration-tim.patch  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bors.toml  check_compile.sh  clippy.toml  code_layout.md  codecov.yml  output.bpl  pubspec.yaml  release.toml  rustfmt.toml  shell.nix  workspaceify.py  x.toml
account/: Cargo.toml
account/api/: Cargo.toml
account/lib/: Cargo.toml
account/provider/: Cargo.toml
account/service/: Cargo.toml
account/src/: account.rs  account_manager.rs  account_storage.rs  account_test.rs  lib.rs
asset-mapping/: Cargo.toml
asset-mapping/src/: lib.rs
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: bench_chain.rs  bench_chain_service.rs  bench_state_tree.rs  bench_storage.rs  bench_sync.rs  bench_vm.rs  benchmarks.rs  chain.rs
benchmarks/src/: chain.rs  chain_service.rs  helper.rs  lib.rs  storage.rs  sync.rs
block-relayer/: Cargo.toml
block-relayer/api/: Cargo.toml
block-relayer/src/: block_relayer.rs  lib.rs  metrics.rs
bus/: Cargo.toml
bus/src/: bus.rs  lib.rs
chain/: Cargo.toml
chain/api/: Cargo.toml
chain/benchmark/: Cargo.toml
chain/chain-notify/: Cargo.toml
chain/data-migration/: Cargo.toml
chain/force-upgrade/: Cargo.toml
chain/mock/: Cargo.toml
chain/open-block/: Cargo.toml
chain/service/: Cargo.toml
chain/src/: chain.rs  chain_common_func.rs  chain_metrics.rs  chain_service.rs  chain_state_db.rs  chain_state_store.rs  dag_chain.rs  executor.rs  fixed_blocks.rs  lib.rs  mem_chain.rs  migration.rs  mock_chain.rs  opened_block.rs  repository.rs  starcoin_chain_state.rs  test_helper.rs  vm2.rs
chain/tests/: block_test_utils.rs  test_block_chain.rs  test_epoch_switch.rs  test_force_upgrade.rs  test_force_upgrade.rs.bak  test_force_upgrade.rs.ignored  test_migration.rs  test_opened_block.rs  test_proof.rs  test_prune.rs  test_range_locate.rs  test_txn_info_and_proof.rs  test_verifier.rs  test_vm1_offline.rs
compressed-proof/: Cargo.toml
compressed-proof/src/: interlink.rs  lib.rs  proof.rs  tests.rs
config/: Cargo.toml
config/config-generator/: Cargo.toml
config/example/: README.md
config/src/: account_provider_config.rs  account_vault_config.rs  api_config.rs  api_quota.rs  available_port.rs  chain_config.rs  genesis_config.rs  helper.rs  lib.rs  logger_config.rs  metrics_config.rs  miner_config.rs  network_config.rs  rpc_config.rs  storage_config.rs  stratum_config.rs  sync_config.rs  tests.rs  txpool_config.rs  upgrade_config.rs  vm_config.rs
consensus/: Cargo.toml
consensus/cryptonight-rs/: Cargo.toml  build.rs
consensus/dag-consensus/: Cargo.toml
consensus/src/: argon.rs  argon_consensus.rs  cn.rs  consensus.rs  consensus_impl.rs  consensus_test.rs  dev.rs  difficult.rs  difficulty.rs  dummy.rs  keccak.rs  lib.rs  pow.rs  time.rs
consensus/tests/: consensus_test.rs
contrib-contracts/: Cargo.toml  README.md
contrib-contracts/modules/: EthStateVerifier.move  MerkleDistributor.move  StarcoinVerifier.move
contrib-contracts/src/: genesis-nft-address.json  genesis_nft_test.rs  lib.rs  merkle_distributor_test.rs  starcoin_merkle_test.rs
dataformat-generator/: Cargo.toml  build.rs
dev/: Cargo.toml
dev/src/: playground.rs
executor/: Cargo.toml
executor/benchmark/: Cargo.toml
executor/src/: account.rs  block_executor.rs  block_executor2.rs  error_code_test.rs  executor.rs  executor2.rs  executor_test.rs  lib.rs  mock_executor.rs  mock_vm_executor.rs  module_compatibility_test.rs  prolog_error_code_test.rs  readonly_function_call_test.rs  script_function_test.rs  test_helper.rs  transaction_builder.rs
executor/tests/: block_reward_test.rs  block_test.rs  dual_vm_genesis_test.rs  error_code_test.rs  executor_test.rs  module_compatibility_test.rs  module_upgrade_test.rs  on_chain_config_test.rs  publish_module_bundle_test.rs  readonly_function_call_test.rs  script_function_test.rs  sip_flag_test.rs  sip_flag_test.rs.ignored  treasury_withdraw_test.rs
flexidag/: Cargo.toml
flexidag/dag/: Cargo.toml
flexidag/service/: Cargo.toml
flexidag/src/: blockdag.rs  flexidag_service.rs  lib.rs
flexidag/tests/: parents_builder_tests.rs  tests.rs
genesis/: Cargo.toml
genesis/migration/: legecy-state-data-for-0x1.csv  legecy-state-data-for-0x3dd0a058b690062d915163078606e0d5.csv
genesis/src/: errors.rs  genesis_context.rs  legacy_state_migration.rs  legecy_state_migration.rs  lib.rs  main.rs  migration.rs  vm2.rs
genesis/tests/: generated_files.rs  legacy_state_migration_test.rs  legecy_migration_test.rs
miner/: Cargo.toml
miner/src/: generate_block_event_pacemaker.rs  headblock_pacemaker.rs  job_bus_client.rs  lib.rs  metrics.rs  miner.rs  miner_client.rs  mock_txn_generator.rs  ondemand_pacemaker.rs  schedule_pacemaker.rs  stratum.rs  task.rs  tx_factory.rs
miner/stratum/: Cargo.toml
miner/tests/: miner_test.rs
mint/: Cargo.toml
mint/src/: lib.rs
network/: Cargo.toml
network-libp2p/: Cargo.toml
network-libp2p/peerset/: Cargo.toml
network-libp2p/src/: behaviour.rs  config.rs  debug_info.rs  discovery.rs  lib.rs  service_task.rs  transport.rs  utils.rs
network-p2p/: Cargo.toml
network-p2p/api/: Cargo.toml
network-p2p/core/: Cargo.toml
network-p2p/derive/: Cargo.toml
network-p2p/peerset/: Cargo.toml
network-p2p/src/: behaviour.rs  business_layer_handle.rs  config.rs  custom_proto.rs  debug_info.rs  discovery.rs  errors.rs  lib.rs  metrics.rs  net_error.rs  network_state.rs  out_events.rs  peer_info.rs  protocol.rs  request_responses.rs  service.rs  service_test.rs  transport.rs  utils.rs
network-p2p/types/: Cargo.toml
network-rpc/: Cargo.toml
network-rpc/api/: Cargo.toml
network-rpc/core/: Cargo.toml
node/: Cargo.toml
node-viewer/: Cargo.toml  bundle.toml
relayer/: Cargo.toml
storage/: Cargo.toml
stratum/: Cargo.toml  stratum_mining_protocol.md  user_guide.md
sync/: Cargo.toml
test-helper/: Cargo.toml
testsuite/: Cargo.toml
(+6839 files in other folders)
