[workspace]
resolver = "2"
members = [
    "types",
    "account",
    "account/api",
    "account/service",
    "abi/decoder",
    "abi/resolver",
    "abi/types",
    "rpc/api",
    "rpc/server",
    "types",
    "storage",
    "state/api",
    "state/service",
    "state/state-tree",
    "state/statedb",
    "state/state-store-api",
    "vm/types",
    "vm/vm-runtime-types",
    "vm/vm-runtime",
    "vm/framework/cached-packages",
    "vm/starcoin-native-interface",
    #"vm/stdlib",
    "vm/compiler",
    "vm/move-prover",
    "vm/mvhashmap",
    "vm/parallel-executor",
    "vm/transaction-builder",
    #"vm/transaction-builder-generator",
    "vm/move-coverage",
    "vm/package-builder",
    "vm/resource-viewer",
    "vm/starcoin-gas-meter",
    "vm/dev",
    "vm/gas-algebra",
    "vm/gas-schedule",
    #"vm/move-explain",
    #"vm/move-package-manager",
    "vm/vm-status-translator",
    "vm/framework",
    "vm/framework/table-natives",
    "vm/starcoin-sdk-builder",
    #"vm/"starcoin-transactional-test-harness",
    "vm/starcoin-aggregator",
    #"vm/transaction-benchmarks",
    #"vm/e2e-tests",
    #"vm/proptest-helpers",
    "vm/starcoin-native-interface",
]

default-members = [
    "types",
    "storage",
    "account",
    "account/api",
    "account/service",
    "abi/decoder",
    "abi/resolver",
    "rpc/api",
    "rpc/server",
    "abi/types",
    "types",
    "storage",
    "state/api",
    "state/service",
    "state/state-tree",
    "state/statedb",
    "state/state-store-api",
    "vm/types",
    "vm/vm-runtime-types",
    "vm/vm-runtime",
    "vm/framework",
    "vm/framework/cached-packages",
    "vm/framework/table-natives",
    "vm/starcoin-sdk-builder",
    "vm/package-builder",
    #"vm/stdlib",
    "vm/compiler",
    "vm/move-prover",
    "vm/mvhashmap",
    "vm/parallel-executor",
    "vm/transaction-builder",
    #"vm/transaction-builder-generator",
    "vm/move-coverage",
    "vm/resource-viewer",
    "vm/starcoin-gas-meter",
    "vm/dev",
    "vm/gas-algebra",
    "vm/gas-schedule",
    #"vm/move-explain",
    #"vm/move-package-manager",
    "vm/vm-status-translator",
    #"vm/starcoin-transactional-test-harness",
    "vm/starcoin-native-interface",
    "vm/starcoin-aggregator",
]

[workspace.lints.clippy]
use_self = "warn"

[profile.dev]
panic = "unwind"

[profile.release]
debug = false
panic = "unwind"
debug-assertions = false
codegen-units = 1

[workspace.package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
homepage = "https://starcoin.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/starcoinorg/starcoin"
rust-version = "1.78.0"

[workspace.dependencies]
anyhow = "~1"
arr_macro = "0.2.1"
arc-swap = "1.5.1"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
async-trait = "0.1.88"
atty = "0.2.14"
backtrace = "0.3"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
bulletproofs = { version = "4.0.0" }
bcs = "0.1"
bech32 = "0.9"
byteorder = "1.3.4"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = [
    "derive",
    "env",
    "unstable-styles",
] }
cli-table = "0.3.2"
claims = "0.7"
test-case = "3.1.0"
coarsetime = "0.1.36"
codespan = { version = "0.8.0", features = ["serialization"] }
codespan-reporting = "0.11"
colored = "2.0.0"
criterion = "0.3"
crossbeam = "0.8.1"
flate2 = "1.0.24"
fxhash = "0.2.1"
hashbrown = "0.14.3"
openrpc-derive = { git = "https://github.com/starcoinorg/openrpc-rs", rev = "1f2f7d3495e3bd3ef3b6fcf7c4e0602cad090d5e", features = [
    "jsonrpc",
] }
openrpc-schema = { git = "https://github.com/starcoinorg/openrpc-rs", rev = "1f2f7d3495e3bd3ef3b6fcf7c4e0602cad090d5e" }
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
dashmap = "~5"
datatest-stable = "0.1.3"
dirs-next = "2.0.0"
either = "~1"
futures = "0.3.30"
git-version = "0.3.5"
heck = "0.5.0"
hex = "0.4"
hyper = { version = "0.14.12", features = ["full"] }
include_dir = { version = "0.6.2", features = ["search"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
libc = "^0.2"
libsecp256k1 = "0.7.1"
log = { version = "0.4.16" }
lru = "0.7.8"
merlin = "3"
ripemd = "0.1.1"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
siphasher = "0.3.10"
mirai-annotations = "1.10.1"
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-bytecode-source-map = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-bytecode-utils = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-bytecode-verifier = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-cli = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-compiler = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-compiler-v2 = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-coverage = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-disassembler = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-docgen = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-errmapgen = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-ir-compiler = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-ir-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-model = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-package = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-prover = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-prover-boogie-backend = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-prover-bytecode-pipeline = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-stackless-bytecode = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-prover-test-utils = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-resource-viewer = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-unit-test = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", features = [
    "table-extension",
] }
move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", features = [
    "table-extension",
] }

names = { version = "0.14.0", default-features = false }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2"
num_cpus = "1.13"
num_enum = "0.5.7"
once_cell = "1.13.0"
ordinal = "0.3.1"
parking_lot = "0.12.1"
petgraph = "0.5.1"
pretty = "0.10.0"
prometheus = { version = "0.13.3", default-features = false }
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.8.5"
rand_0_7_3 = { package = "rand", version = "0.7.3" }
rand_core = { version = "0.6.3", default-features = false }
rand_core_0_5_1 = { package = "rand_core", version = "0.5.1" }
rayon = "1.6.1"
regex = "1.6.0"
rocksdb = { default-features = false, features = ["lz4"], version = "0.21.0" }
schemars = { git = "https://github.com/starcoinorg/schemars", rev = "a64c6ddf7ca4796e090208b1476de2e53772042f" }
serde = { version = "1.0.130", features = ["derive"] }
serde-generate = { git = "https://github.com/starcoinorg/serde-reflection", rev = "eb95fd4e3b67e08d71432b522c53833a0b855d80" }
serde-reflection = { git = "https://github.com/starcoinorg/serde-reflection", rev = "eb95fd4e3b67e08d71432b522c53833a0b855d80" }
serde_bytes = "0.11"
serde_json = "~1"
serde_yaml = "0.8.26"
sha2 = "0.9.3"
sha3 = "0.9.1"
shell-words = "1.0.0"
simplelog = "0.9.0"
smallvec = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.3"
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }

starcoin-abi-decoder = { path = "abi/decoder" }
starcoin-abi-resolver = { path = "abi/resolver" }
starcoin-abi-types = { path = "abi/types" }
starcoin-framework = { path = "vm/framework" }
starcoin-sdk-builder = { path = "vm/starcoin-sdk-builder" }
starcoin-move-compiler = { path = "vm/compiler" }
#starcoin-move-explain = { path = "vm/move-explain" }
starcoin-gas-algebra = { path = "vm/gas-algebra" }
starcoin-gas-schedule = { path = "vm/gas-schedule" }
starcoin-gas-meter = { path = "vm/starcoin-gas-meter" }
starcoin-native-interface = { path = "vm/starcoin-native-interface" }
starcoin-aggregator = { path = "vm/starcoin-aggregator" }
starcoin-resource-viewer = { path = "vm/resource-viewer" }
starcoin-package-builder = { path = "vm/package-builder" }
starcoin-move-stdlib = { path = "vm/framework/move-stdlib" }
starcoin-table-natives = { path = "vm/framework/table-natives" }
starcoin-cached-packages = { path = "vm/framework/cached-packages" }
starcoin-transaction-builder = { path = "vm/transaction-builder" }
#starcoin-transactional-test-harness = { path = "starcoin-transactional-test-harness" }
starcoin-vm-runtime = { path = "vm/vm-runtime" }
starcoin-vm-runtime-types = { path = "vm/vm-runtime-types" }
starcoin-vm-types = { path = "vm/types" }
#stdlib = { path = "stdlib" }
starcoin-mvhashmap = { path = "vm/mvhashmap" }
starcoin-parallel-executor = { path = "vm/parallel-executor" }
#starcoin-transaction-benchmarks = { path = "transaction-benchmarks" }
#starcoin-language-e2e-tests = { path = "e2e-tests" }
#starcoin-proptest-helpers = { path = "proptest-helpers" }

starcoin-types = { path = "types" }
starcoin-uint = { path = "types/uint" }
starcoin-account = { path = "account" }
starcoin-account-api = { path = "account/api" }
starcoin-account-service = { path = "account/service" }
starcoin-dev = { path = "vm/dev" }
starcoin-rpc-api = { path = "rpc/api" }
starcoin-state-api = { path = "state/api" }
starcoin-state-service = { path = "state/service" }
starcoin-state-store-api = { path = "state/state-store-api" }
starcoin-state-tree = { path = "state/state-tree" }
starcoin-statedb = { path = "state/statedb" }
starcoin-storage = { path = "storage" }
vm-status-translator = { path = "vm/vm-status-translator" }

# starcoin shared dependencies
# branch multi-move-vm
starcoin-accumulator = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-infallible = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-time-service = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-service-registry = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-logger = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
forkable-jellyfish-merkle = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
bcs-ext = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-metrics = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-decrypt = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }
starcoin-chain-notify = { git = "https://github.com/starcoinorg/starcoin", rev = "515acac0cc25521b215898d833831bd02ef1106d" }

tempfile = "3.2.0"
textwrap = "0.14.0"
thiserror = "1.0"
tiny-keccak = { version = "2", features = ["keccak"] }
toml = "0.5.9"
tracing = "0.1.34"
uint = "0.9.3"
vm = { package = "move-binary-format", git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", features = [
    "fuzzing",
] }
walkdir = "2.3.1"
which = "4.1.0"
zeroize = "1.3.0"
better_any = "0.1.1"
paste = "1.0.7"

[profile.release.package]
starcoin-vm-runtime.debug = 1

[profile.release.package."*"]
debug = false

#[profile.release.package.cryptonight-rs]
#opt-level = 2

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
